--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -30,4 +30,10 @@ body {
   display: flex;
   justify-content: flex-end;
   list-style-type: none;
+  text-align: center;
+}
+.current {
+  background-color: #c2eeee;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
 }
