--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -1,45 +1,42 @@
-div.gallery {
-  border: 1px solid #ccc;
+section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
-div.gallery:hover {
-  border: 1px solid #777;
-  opacity: 0.6;
+.responsive {
+  flex: 1 24%; /* 24% to leave some spacing */
+  margin: 20px;
+  box-sizing: border-box;
 }
 
-div.gallery img {
+.gallery {
+  position: relative;
+  text-align: center;
+}
+
+img {
   width: 100%;
   height: auto;
 }
 
-div.desc {
-  padding: 15px;
-  text-align: center;
-}
-
-* {
+.desc {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 10px;
   box-sizing: border-box;
 }
 
-.responsive {
-  padding: 0 6px;
-  float: left;
-  width: 24.99999%;
-}
-
-@media only screen and (max-width: 900px) {
+@media (max-width: 768px) {
   .responsive {
-    width: 49.99999%;
-    margin: 6px 0;
+    flex: 1 100%; /* 100% width on mobile */
   }
 }
-
-@media only screen and (max-width: 650px) {
-  .responsive {
-    width: 100%;
-  }
-}
-img {
-  width: 200px;
-  height: 150px;
+.responsive:hover {
+  transform: scale(1.05);
+  opacity: 0.6;
 }
