--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -8,9 +8,48 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin: 15px;
+    margin: 5px;
   }
   .main-nav a {
     font-size: 15px;
+  }
+  section,
+  .sec {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .iframe {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+  }
+  .video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .card {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10rem;
+  }
+  .button {
+    margin: 10px;
+  }
+  .hero {
+    overflow-y: hidden;
+    height: 70vh;
+  }
+  .h2 {
+    font-size: 1.35rem;
+  }
+  .h3 {
+    font-size: 1.05rem;
+  }
+  .hero-sec {
+    max-width: 50ch;
   }
 }
