--- a/assets/css/typography.css
+++ b/assets/css/typography.css
@@ -1,11 +1,40 @@
 .logo {
-  font-size: 1.75rem;
+  font-size: 2rem;
   font-weight: 600;
   color: #333;
   margin-right: auto;
   overflow: hidden;
 }
 .main-nav {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-weight: 600;
+}
+h2 {
+  font-size: 1.75rem;
+}
+h3 {
+  font-size: 1.35rem;
+}
+/* form styles */
+
+label {
+  margin-bottom: 5px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 5px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  width: auto;
+  cursor: pointer;
+}
+
+#fs-frm {
+  max-width: 400px;
+  margin: auto;
 }
