--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -44,6 +44,27 @@ img {
 
   margin: 1.5rem;
 }
+* form styles */ label {
+  margin-bottom: 5px;
+}
+
+input,
+textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 5px;
+  box-sizing: border-box;
+}
+
+input[type="submit"] {
+  width: auto;
+  cursor: pointer;
+}
+
+#fs-frm {
+  max-width: 400px;
+  margin: auto;
+}
 
 @media (max-width: 768px) {
   .responsive {
